--- a/apps/server/just-site/.eslintrc.json
+++ b/apps/server/just-site/.eslintrc.json
@@ -1,18 +1,30 @@
 {
-    "extends": ["../../../.eslintrc.json"],
-    "ignorePatterns": ["!**/*"],
+    "parser": "@typescript-eslint/parser",
+    "extends": [
+        "../../../.eslintrc.json",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+    ],
+    "plugins": ["svelte3", "@typescript-eslint"],
+    "ignorePatterns": ["!**/*", "*.cjs", "vite.config.ts", "node_modules"],
     "overrides": [
         {
-            "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-            "rules": {}
-        },
-        {
-            "files": ["*.ts", "*.tsx"],
-            "rules": {}
-        },
-        {
-            "files": ["*.js", "*.jsx"],
-            "rules": {}
+            "files": ["*.svelte"],
+            "parser": "svelte-eslint-parser",
+            "parserOptions": {
+                "parser": "@typescript-eslint/parser"
+            }
         }
-    ]
+    ],
+    "parserOptions": {
+        "sourceType": "module",
+        "ecmaVersion": 2020,
+        "extraFileExtensions": [".svelte"]
+    },
+    "env": {
+        "browser": true,
+        "es2017": true,
+        "node": true
+    }
 }
