--- a/apps/server/just-site/tsconfig.json
+++ b/apps/server/just-site/tsconfig.json
@@ -15,5 +15,5 @@
             "path": "./tsconfig.spec.json"
         }
     ],
-    "extends": "../../../tsconfig.base.json"
+    "extends": "./.svelte-kit/tsconfig.json"
 }
