--- a/libs/branding/project.json
+++ b/libs/branding/project.json
@@ -1,22 +1,8 @@
 {
     "name": "branding",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
-    "sourceRoot": "libs/branding/src",
+    "sourceRoot": "libs/branding",
     "projectType": "library",
-    "targets": {
-        "lint": {
-            "executor": "@nx/eslint:lint",
-            "options": {
-                "lintFilePatterns": ["{projectRoot}/**/*.ts"]
-            }
-        },
-        "test": {
-            "executor": "@nx/jest:jest",
-            "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
-            "options": {
-                "jestConfig": "libs/branding/jest.config.ts"
-            }
-        }
-    },
+    "targets": {},
     "tags": ["shared"]
 }
