--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "@nx/vite": "18.0.4",
         "@nx/web": "18.0.4",
         "@nx/workspace": "18.0.4",
+        "@sveltejs/adapter-auto": "^3.1.1",
+        "@sveltejs/kit": "^2.5.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.2",
         "@swc-node/register": "~1.8.0",
         "@swc/cli": "~0.3.9",
@@ -75,10 +77,13 @@
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
+        "eslint-plugin-svelte": "^2.26.0",
+        "eslint-plugin-svelte3": "^4.0.0",
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-environment-node": "^29.7.0",
+        "jsdom": "~22.1.0",
         "nx": "18.0.4",
         "pino-pretty": "^10.3.1",
         "postcss": "^8.4.35",
