feat(server-just-site): added homepage

--- a/apps/server/just-site/project.json
+++ b/apps/server/just-site/project.json
@@ -10,7 +10,7 @@
                 "commands": ["cd apps/server/just-site && vite build --config vite-config.js"]
             }
         },
-        "ertz": {
+        "serve": {
             "executor": "nx:run-commands",
             "options": {
                 "commands": ["cd apps/server/just-site && vite dev --config vite-config.js"]
