--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "check": "pnpm run format:check && pnpm run lint && pnpm run test && pnpm run build"
     },
     "devDependencies": {
+        "@iconify/svelte": "^3.1.6",
         "@nx/cypress": "18.0.4",
         "@nx/esbuild": "18.0.4",
         "@nx/eslint": "18.0.4",
@@ -46,7 +47,7 @@
         "@nx/vite": "18.0.4",
         "@nx/web": "18.0.4",
         "@nx/workspace": "18.0.4",
-        "@sveltejs/adapter-auto": "^3.1.1",
+        "@sveltejs/adapter-node": "^4.0.1",
         "@sveltejs/kit": "^2.5.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.2",
         "@swc-node/register": "~1.8.0",
@@ -98,7 +99,7 @@
         "typedoc": "^0.25.8",
         "typedoc-plugin-markdown": "^3.17.1",
         "typescript": "5.3.3",
-        "vite": "^5.1.3",
+        "vite": "^4.5.1",
         "vitepress": "1.0.0-rc.44",
         "vitest": "^1.3.1"
     },
