--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,15 +19,7 @@
         "strict": true,
         "strictNullChecks": true,
         "paths": {
-            "server/backup-service/snapshots": [
-                "libs/server/backup-service/snapshots/src/index.ts"
-            ],
-            "server/music-downloader/downloader": [
-                "libs/server/music-downloader/downloader/src/index.ts"
-            ],
-            "server/music-downloader/scheduler": [
-                "libs/server/music-downloader/scheduler/src/index.ts"
-            ],
+            "branding-assets/*": ["libs/branding/assets/*"],
             "shared/fastify": ["libs/shared/fastify/src/index.ts"],
             "shared/health": ["libs/shared/health/src/index.ts"],
             "shared/logging": ["libs/shared/logging/src/index.ts"],
