feat(server-just-site): header mobile optimization

--- a/.prettierrc
+++ b/.prettierrc
@@ -11,7 +11,11 @@
     "printWidth": 100,
     "overrides": [
         {
-            "files": ["*.yml", "*.yaml", "*.md"],
+            "files": [
+                "*.yml",
+                "*.yaml",
+                "*.md"
+            ],
             "options": {
                 "tabWidth": 2
             }
