--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "eslint-plugin-react-hooks": "4.6.0",
         "eslint-plugin-svelte": "^2.26.0",
         "eslint-plugin-svelte3": "^4.0.0",
+        "flowbite-svelte": "^0.44.24",
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
