--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "babel-jest": "^29.7.0",
         "copyfiles": "^2.4.1",
         "cypress": "^13.6.4",
+        "emailjs": "^4.0.3",
         "esbuild": "^0.20.1",
         "eslint": "8.56.0",
         "eslint-config-next": "14.1.0",
