--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "prettier": "^3.2.5",
         "replace-in-files-cli": "^2.2.0",
         "rimraf": "^5.0.5",
+        "stream-browserify": "^3.0.0",
         "svelte": "^4.2.11",
         "svelte-check": "^3.6.4",
         "tailwindcss": "^3.4.1",
