--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -23,7 +23,7 @@ server {
     set_by_lua_block $gitlab_base { return os.getenv("GITLAB_BASE") }
     set_by_lua_block $gitlab_port { return os.getenv("GITLAB_PORT") }
 
-    set_by_lua_block $linkstack_port { return os.getenv("LINKSTACK_PORT") }
+    set_by_lua_block $just_site_port { return os.getenv("JUST_SITE_PORT") }
 
     set_by_lua_block $music_base { return os.getenv("MUSIC_BASE") }
     set_by_lua_block $music_port { return os.getenv("MUSIC_PORT") }
@@ -45,9 +45,7 @@ server {
     server_name justin.konratts.de;
 
     location / {
-        proxy_set_header Host $host;
-        proxy_set_header X-VerifiedViaNginx yes;
-        set $upstream linkstack:$linkstack_port;
+        set $upstream just-site:$just_site_port;
         proxy_pass http://$upstream;
     }
 
