--- a/apps/server/nginx/envs.conf
+++ b/apps/server/nginx/envs.conf
@@ -23,8 +23,7 @@ env GITLAB_PORT;
 
 env GRAFANA_PORT;
 
-env LINKSTACK_ADMIN;
-env LINKSTACK_PORT;
+JUST_SITE_PORT;
 
 env MUSIC_BASE;
 env MUSIC_PORT;
