--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -32,6 +32,8 @@ GITLAB_PORT=80
 GITLAB_AUTH_CLIENT_ID=gitlab
 GITLAB_AUTH_CLIENT_SECRET=secret
 
+JUST_SITE_PORT=3000
+
 MUSIC_BASE=/music
 MUSIC_PORT=4533
 MUSIC_SUBNET=172.18.0.0/16
