feat(server-just-site): pass linting

--- a/apps/server/just-site/.eslintrc.json
+++ b/apps/server/just-site/.eslintrc.json
@@ -7,7 +7,7 @@
         "prettier"
     ],
     "plugins": ["svelte3", "@typescript-eslint"],
-    "ignorePatterns": ["!**/*", "*.cjs", "vite.config.ts", "node_modules"],
+    "ignorePatterns": ["!**/*", "*.cjs", "vite.config.ts", "node_modules", ".svelte-kit"],
     "overrides": [
         {
             "files": ["*.svelte"],
