fix(server-just-site): fixed env not available in CI

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -250,6 +250,8 @@ services:
       <<: *build-args
       context: ../..
       dockerfile: apps/server/just-site/Dockerfile
+    env_file:
+      - ./just-site/.env
     healthcheck:
       test: wget -qO- http://localhost:${JUST_SITE_PORT} || exit 1
     image: ${IMAGE_BASE}/server-just-site
