--- a/apps/server/documentation/doc-projects.json
+++ b/apps/server/documentation/doc-projects.json
@@ -1,6 +1,6 @@
 [
     {
-        "name": "monorepo-private",
+        "name": "monorepo",
         "paths": ["./apps", "./libs", "./docs"]
     }
 ]
