--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DOCKER_REGISTRY=justin.konratts.de
 ORGANIZATION=codesdowork
-PROJECT=monorepo-private
+PROJECT=monorepo
 IMAGE_BASE=${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
 CACHE_DIR=cache
 CACHE_BASE=${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}/${CACHE_DIR}
