--- a/apps/server/just-site/project.json
+++ b/apps/server/just-site/project.json
@@ -22,6 +22,12 @@
                 "commands": ["cd apps/server/just-site && vite preview --config vite-config.js"]
             }
         },
+        "pre-docker": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "touch ./apps/server/just-site/.env"
+            }
+        },
         "lint": {
             "executor": "@nx/eslint:lint",
             "outputs": ["{options.outputFile}"],
