--- a/apps/server/music/project.json
+++ b/apps/server/music/project.json
@@ -2,6 +2,13 @@
     "name": "server-music",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
-    "targets": {},
+    "targets": {
+        "pre-docker": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "touch ./apps/server/music/.env"
+            }
+        }
+    },
     "tags": []
 }
