--- a/apps/server/renovate/project.json
+++ b/apps/server/renovate/project.json
@@ -2,6 +2,13 @@
     "name": "server-renovate",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
-    "targets": {},
+    "targets": {
+        "deploy-command": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "echo docker compose -f /opt/monorepo/server/renovate/docker-compose.yml --env-file /opt/monorepo/.env --env-file /opt/monorepo/server/.env --env-file /opt/monorepo/server/renovate/.env  up --pull always renovate"
+            }
+        }
+    },
     "tags": []
 }
