--- a/apps/server/just-site/project.json
+++ b/apps/server/just-site/project.json
@@ -25,7 +25,7 @@
         "pre-docker": {
             "executor": "nx:run-commands",
             "options": {
-                "command": "touch ./apps/server/just-site/.env"
+                "command": "node ./apps/server/just-site/copy-env.js"
             }
         },
         "lint": {
