--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "@vitest/ui": "^1.0.4",
         "autoprefixer": "^10.4.17",
         "babel-jest": "^29.7.0",
+        "copy-file": "^11.0.0",
         "copyfiles": "^2.4.1",
         "cypress": "^13.6.5",
         "emailjs": "^4.0.3",
